--- a/vendas.html
+++ b/vendas.html
@@ -7,6 +7,7 @@
 </head>
 <body>
   <h1>pagina de vendas</h1>
+  <p>vendas = R$ 5000,00</p>
   <a href="index.html"> ir para a pagina inicial</a>
 </body>
 </html>
