--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <title>site-de-vendas</title>
 </head>
 <body>
-  <h1>pagina home</h1>
+  <h1>pagina inicial</h1>
   <a href="vendas.html">voltar para a pagina inicial</a>
 </body>
 </html>
