--- a/login.html
+++ b/login.html
@@ -3,11 +3,9 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>site-de-vendas</title>
+  <title>página de login</title>
 </head>
 <body>
-  <h1>pagina de blog</h1>
-  <h2>post número 1</h2>
-  <h2>post número 2</h2>
+  <h1>pagina de login</h1>
 </body>
 </html>
