(y) finalização da feature login

--- a/index.html
+++ b/index.html
@@ -6,7 +6,9 @@
   <title>site-de-vendas</title>
 </head>
 <body>
-  <h1>pagina home</h1>
-  <a href="vendas.html">voltar para a pagina inicial</a>
+  <h1>pagina inicial</h1>
+  <a href="vendas.html">ir para a página de vendas</a>
+  <a href="login.html">ir para a página de login</a>
+</body>
 </body>
 </html>
