--- a/index.html
+++ b/index.html
@@ -3,10 +3,11 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>site-de-vendas</title>
+  <title>Document</title>
 </head>
 <body>
-  <h1>pagina home</h1>
-  <a href="vendas.html">voltar para a pagina inicial</a>
+  <h1>pagina de boas vindas</h1>
+  <a href="vendas.html">ir para página de vendas</a>
+  <a href="pedidos.html">ir para a página de pedidos</a>
 </body>
 </html>
